test/fails/bad_geo/mult4.lgl
tag a is vec<2>;
tag b is vec<2>;

void main() {
    a x = [1., 1.];
    b->a b_a = [[1., 1.], [1., 1.]];
    vec2 bad = b_a * x; // No possible cast
}